--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
 		<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
-		<a-marker-camera preset='hiro'></a-marker-camera>
+		<a-marker-camera  preset='custom' type='pattern' url='pattern-marker.patt'></a-marker-camera>
 	</a-scene>
 </body>
