--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!-- AR.js by @jerome_etienne - github: https://github.com/jeromeetienne/ar.js - info: https://medium.com/arjs/augmented-reality-in-10-lines-of-html-4e193ea9fdbf -->
-<script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
-<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
+<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/examples/vendor/aframe/build/aframe.min.js"></script>
+<script src="/AR/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
 		<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
-		<a-marker-camera  type='pattern' patternUrl='https://mb2dev.github.io/pattern-marker.patt'></a-marker-camera>
+		<a-marker-camera preset='custom' type='pattern' url='https://mb2dev.github.io/pattern-marker.patt'></a-marker-camera>
 	</a-scene>
 </body>
